--- a/app/index.html
+++ b/app/index.html
@@ -240,7 +240,7 @@
       <div class="title">
         <h1>Infrastructure Action Tracker</h1>
         <p class="subtitle">
-          A lightweight operational tracker for infrastructure actions — capture context, ownership, lifecycle state,
+          A lightweight operational tracker for infrastructure actions: capture context, ownership, lifecycle state,
           and attach evidence (S3) with an auditable record stored in Postgres (RDS).
         </p>
         <div class="chips">
@@ -315,7 +315,7 @@
 
       <div class="modal-grid">
         <div class="modal-full">
-          <label>Title (imperative + specific)</label>
+          <label>Title</label>
           <input id="m-title" placeholder="Restart the stuck ECS service in prod-us-east-1" />
         </div>
 
@@ -335,7 +335,7 @@
         </div>
 
         <div class="modal-full">
-          <label>Description (markdown-style text supported)</label>
+          <label>Description</label>
           <textarea id="m-description">- What happened
 - Link to dashboard/logs
 - Error snippet</textarea>
