restore evidence upload ui and keep modal safe after save

--- a/app/index.html
+++ b/app/index.html
@@ -229,9 +229,9 @@
     <div>
       <h1>Infrastructure Action Tracker</h1>
       <div class="subtitle">
-        Lightweight operational tracker for infrastructure actions — capture context,
-        ownership, lifecycle state, and attach evidence stored in S3 with an auditable
-        record in Postgres (RDS).
+        Lightweight operational tracker for infrastructure actions that 
+        captures context, ownership, lifecycle state, and supporting 
+        evidence stored in S3.
       </div>
       <div class="chips">
         <span class="chip" id="chip-user"></span>
@@ -256,7 +256,7 @@
       <div><label>Component</label><select id="f-component"></select></div>
       <button class="btn" id="btn-clear">Clear</button>
     </div>
-    <div class="hint">Filtering is live — press Enter if you prefer an explicit “apply”.</div>
+    <div class="hint">Filtering updates automatically as you type. Press Enter if you prefer an explicit apply action</div>
   </div>
 
   <div class="card">
