Modify readme, index and infra diagramn

--- a/app/index.html
+++ b/app/index.html
@@ -233,7 +233,7 @@
 
   <div class="topbar">
     <div>
-      <h1>Infrastructure Action Tracker</h1>
+      <h1>Infrastructure Incident Management Tracking</h1>
       <div class="subtitle">
         Lightweight operational tracker for infrastructure actions that
         captures context, ownership, lifecycle state, and supporting
